# MyMath

./: .gitignore  README.md  config.example.yaml  create_shortcut.py  pyproject.toml
.github/workflows/: update-version.yml
src/my_math/: __main__.py  config.py  game.py
